# estety_xl

./: .gitignore  README.md  pyproject.toml
src/estxl/: add_child.py  analysis.py  cli.py  de_dup.py
src/utils/: __init__.py  get_env.py  get_filename.py  get_root.py
