[project]
name = "estety-xl"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "etimalise", email = "42682894+etimalise@users.noreply.github.com" }]
requires-python = ">=3.13,<4"
dependencies = [
  "pydantic-settings~=2.10.1"
]

[project.scripts]
estxl = "estxl.cli:main"

[tool.poetry]
packages = [
    { include = "utils", from = "src" },
    { include = "estxl", from = "src" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
